# sirc

./: .gitattributes  .gitignore  Cargo.toml  README.md  notes.md  renovate.json  sirc.code-workspace
sbrc-vm/: Cargo.toml
sbrc-vm/src/: main.rs
sirc-tiledit/: .clang-format  .clang-format-ignore  .clang-tidy  .clang-tidy-ignore  .gitignore  .tool-versions  README.md  gcovr.cfg  meson.build  native-macos-llvm.ini  setup-macos.sh
sirc-tiledit/.cache/clangd/index/: main.cpp.E7FC585F8D7EAC01.idx  mainwindow.cpp.924DFEAE07B83393.idx  mainwindow.h.05CA90BAE134E07C.idx
sirc-tiledit/docker/: README.md  builder.Dockerfile  entrypoint.sh
sirc-tiledit/include/: imageprocessor.h  mainwindow.h  mediancutquantizer.h  quantizer.h  sircimage.h
sirc-tiledit/libs/gui/src/: aboutdialog.cpp  aboutdialog.hpp  inputimage.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  pixmapadapter.cpp  pixmapadapter.hpp
sirc-tiledit/libs/gui/ui/: aboutdialog.ui  mainwindow.ui
sirc-tiledit/libs/shared/benchmarks/: benchmarks.cpp  meson.build
sirc-tiledit/libs/shared/include/: constants.hpp  imageexporter.hpp  imageloader.hpp  imagemerger.hpp  imagetileslicer.hpp  mediancutquantizer.hpp  miscadapter.hpp  quantizer.hpp  rgbaadapter.hpp  sircimage.hpp  utils.hpp
sirc-tiledit/libs/shared/src/: imageexporter.cpp  imageloader.cpp  imagemerger.cpp  imagetileslicer.cpp  mediancutquantizer.cpp  miscadapter.cpp  rgbaadapter.cpp  sircimage.cpp
sirc-tiledit/libs/shared/tests/: imageexporter.test.cpp  imagemerger.test.cpp  imagetileslicer.test.cpp  integration.test.cpp  mediancutquantizer.test.cpp  meson.build  sircimage.test.cpp  test_utils.cpp  utils.cpp  utils.hpp  utils.test.cpp
sirc-tiledit/resources/examples/source/: public-license.txt
sirc-tiledit/src/: aboutdialog.cpp  imageprocessor.cpp  main.cpp  mainwindow.cpp  mediancutquantizer.cpp  sircimage.cpp
sirc-tiledit/ui/: mainwindow.ui
sirc-vm/: .gitignore  Cargo.toml  new-notes.md  notes.md
sirc-vm/device-debug/: Cargo.toml
sirc-vm/device-debug/src/: lib.rs
sirc-vm/device-ram/: Cargo.toml
sirc-vm/device-ram/src/: lib.rs
sirc-vm/device-terminal/: Cargo.toml
sirc-vm/device-terminal/src/: lib.rs
sirc-vm/device-video/: Cargo.toml
sirc-vm/device-video/src/: lib.rs  tile_data.rs  types.rs
sirc-vm/device-video/src/snapshots/: device_video__tests__last_frame.snap
sirc-vm/examples/: check-all.sh
sirc-vm/examples/basic-video/: Makefile  basic-video.asm
sirc-vm/examples/boring/: Makefile  boring.asm  boring.register-dump-expected  software-exception.register-dump-expected
sirc-vm/examples/bus-error/: Makefile  bus-error.asm  bus-error.register-dump-expected
sirc-vm/examples/byte-sieve/: Makefile  byte-sieve.asm
sirc-vm/examples/faults/: Makefile  faults-high.asm  faults.asm  faults.register-dump-expected
sirc-vm/examples/hardware-exception/: Makefile  hardware-exception.asm  hardware-exception.register-dump-expected
sirc-vm/examples/software-exception/: Makefile  software-exception.asm  software-exception.register-dump-expected
sirc-vm/examples/store-load/: Makefile  software-exception.register-dump-expected  store-load.asm  store-load.register-dump-expected
sirc-vm/libsirc/: Cargo.toml  README.md  build.rs  cbindgen.toml
sirc-vm/libsirc/include/: libsirc.h
sirc-vm/libsirc/src/: capi.rs  lib.rs
sirc-vm/libsirc/tests/: mod.rs
sirc-vm/libsirc/tests/snapshots/: r#mod__tilemap_to_str.snap
sirc-vm/peripheral-bus/: Cargo.toml
sirc-vm/peripheral-bus/src/: conversion.rs  device.rs  helpers.rs  lib.rs  memory_mapped_device.rs  reset_unit.rs
sirc-vm/peripheral-bus/tests/: integration_test.rs
sirc-vm/peripheral-clock/: Cargo.toml
sirc-vm/peripheral-clock/src/: lib.rs
sirc-vm/peripheral-cpu/: Cargo.toml
sirc-vm/peripheral-cpu/src/: executors.rs  lib.rs  registers.rs  util.rs
sirc-vm/peripheral-cpu/src/coprocessors/: mod.rs  shared.rs
sirc-vm/peripheral-cpu/src/execution/: alu.rs  execution_effective_address.rs  fetch_and_decode.rs  memory_access.rs  mod.rs  shared.rs  write_back.rs
sirc-vm/peripheral-cpu/src/instructions/: alu.rs  definitions.rs  encoding.rs  encoding.test.rs  fetch.rs  mod.rs
sirc-vm/peripheral-cpu/src/microcode/: address.rs  interrupts.rs  mod.rs
sirc-vm/peripheral-cpu/tests/: mod.rs
sirc-vm/peripheral-cpu/tests/coprocessors/: dma_unit.rs  mod.rs
sirc-vm/peripheral-cpu/tests/exceptions/: common.rs  faults.rs  hardware_exceptions.rs  mod.rs  reset.rs  software_exceptions.rs
sirc-vm/peripheral-cpu/tests/instructions/: arithmetic_immediate_test.rs  arithmetic_register_test.rs  arithmetic_short_immediate_test.rs  branching_test.rs  common.rs  ldea_test.rs  ldel_test.rs  ljmp_test.rs  load_test.rs  mod.rs  protected_mode_test.rs  store_test.rs
sirc-vm/peripheral-mem/: Cargo.toml
sirc-vm/peripheral-mem/src/: conversion.rs  helpers.rs  lib.rs  memory_mapped_device.rs
sirc-vm/peripheral-mem/tests/: integration_test.rs
sirc-vm/peripheral-terminal/: Cargo.toml
sirc-vm/peripheral-terminal/src/: lib.rs
sirc-vm/sbrc-vm/: Cargo.toml  test-input.txt
sirc-vm/sbrc-vm/benches/: byte_sieve.rs  performance-notes.md
sirc-vm/sbrc-vm/src/: debugger.rs  lib.rs  main.rs
sirc-vm/sbrc-vm/src/debug_adapter/: mod.rs  server.rs  types.rs
sirc-vm/sbrc-vm/src/utils/: cpu_from_bus.rs  frame_reporter.rs  lines.rs  mod.rs
sirc-vm/sbrc-vm/tests/: mod.rs
sirc-vm/sbrc-vm/tests/debug_adapter/: server_test.rs
sirc-vm/sbrc-vm/tests/utils/: lines_test.rs  mod.rs
sirc-vm/sirc-vm/: Cargo.toml
sirc-vm/sirc-vm/benches/: byte_sieve.rs  performance-notes.md
sirc-vm/sirc-vm/src/: debugger.rs  lib.rs  main.rs
sirc-vm/sirc-vm/src/utils/: cpu_from_bus.rs  (+2 more)
sirc-vm/toolchain/: Cargo.toml
sirc-vm/toolchain-interop/: Cargo.toml  build.rs  cbindgen.toml
sirc-vm/toolchain-interop/include/: sirc_toolchain_interop.h
sirc-vm/toolchain-interop/tests/: mod.rs
sirc-vm/toolchain/src/: lib.rs
sirc-vm/toolchain/tests/: assembler_test.rs  mod.rs
toolchain/: Cargo.toml
toolchain/src/: assembler.rs  linker.rs
toolchain/src/parsers/: instruction.rs  mod.rs  shared.rs
toolchain/src/types/: object.rs
(+326 files in other folders)
