[workspace]

resolver = "2"

members = [
    "device-debug",
    "device-ram",
    "device-terminal",
    "device-video",
    "peripheral-bus",
    "peripheral-cpu",
    "sirc-vm",
    "toolchain",
    "toolchain-interop",
]

[profile.release]
lto = true

[profile.bench]
inherits = "release"
debug = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
