[workspace]

resolver = "2"

members = [
    "libsirc",
    "toolchain",
    "sirc-vm",
    "peripheral-bus",
    "peripheral-cpu",
    "device-debug",
    "device-ram",
    "device-terminal",
    "device-video",
]

[profile.release]
lto = true

[profile.bench]
inherits = "release"
debug = true

[profile.dev.package]
insta.opt-level = 3
