[package]
name = "toolchain"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
peripheral_cpu = { path = "../peripheral-cpu" }
nom = "7.1.1"
itertools = "0.10.5"
postcard = { version = "1.0.2", features = ["alloc"] }
serde = "1.0.145"

[[bin]]
name = "assembler"
path = "src/assembler.rs"

[[bin]]
name = "linker"
path = "src/linker.rs"
