[package]
name = "peripheral_bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-traits = "0.2"
log = "0.4.21"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
tempfile = "3"