[package]
name = "sbrc_vm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
device_debug = { path = "../device-debug" }
device_ram = { path = "../device-ram" }
device_terminal = { path = "../device-terminal" }
device_video = { path = "../device-video" }
log = "0.4.21"
peripheral_bus = { path = "../peripheral-bus" }
peripheral_clock = { path = "../peripheral-clock" }
peripheral_cpu = { path = "../peripheral-cpu" }
stderrlog = "0.6.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "byte_sieve"
harness = false