[package]
name = "sirc_vm"
version = "0.1.0"
edition = "2021"

[features]
default = ["video"]
video = ["dep:device_video"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
device_debug = { path = "../device-debug" }
device_ram = { path = "../device-ram" }
device_terminal = { path = "../device-terminal" }
device_video = { path = "../device-video", optional = true }
log = "0.4.21"
peripheral_bus = { path = "../peripheral-bus" }
peripheral_cpu = { path = "../peripheral-cpu" }
stderrlog = "0.6.0"
dap = "0.4.1-alpha1"
thiserror = "2.0.0"
postcard = { version = "1.0.8", features = ["alloc"] }
serde = "1.0.200"
line-col = "0.2.1"
spin_sleep_util = "0.1.1"
spin_sleep = "1.2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "byte_sieve"
harness = false
