[package]
name = "toolchain"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
peripheral_cpu = { path = "../peripheral-cpu" }
nom = "7.1.3"
nom-supreme = "0.8.0"
itertools = "0.12.1"
postcard = { version = "1.0.8", features = ["alloc"] }
serde = "1.0.197"
bytemuck = "1.15.0"
num-traits = "0.2"

[dev-dependencies]
insta = { version = "1.36.1", features = ["yaml"] }
pretty-hex = "0.4.1"
