[package]
name = "toolchain"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
peripheral_cpu = { path = "../peripheral-cpu" }
sirc_vm = { path = "../sirc-vm" }
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "5.0.0"
itertools = "0.14.0"
postcard = { version = "1.0.8", features = ["alloc"] }
serde = "1.0.200"
bytemuck = "1.15.0"
num-traits = "0.2.18"
sha2 = "0.10.8"
colored = "2.1"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
pretty-hex = "0.4.1"